<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206020"
    tools:context=".RecicladorSignUp">

    <TextView
        android:id="@+id/recLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/login_reciclador"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/correoRecTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="219dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/contraseñaRecTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="297dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="268dp" />

    <TextView
        android:id="@+id/recLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="526dp"
        android:text="@string/no_tengo_una_cuenta_creada"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="449dp" />

    <Button
        android:id="@+id/ingresarRecBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="180dp"
        android:onClick="entrarBoton"
        android:text="@string/ingresar" />

    <Button
        android:id="@+id/registrarseRecBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="180dp"
        android:text="@string/registrarse" />
</RelativeLayout>