<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206020"
    tools:context=".AddSolicitud">

    <TextView
        android:id="@+id/reciclarLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/reciclar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="67dp" />

    <EditText
        android:id="@+id/nombreRecTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="173dp"
        android:ems="10"
        android:hint="@string/nombre_del_reciclador"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="205dp" />

    <EditText
        android:id="@+id/lotesRectTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/n_de_lotes"
        android:inputType="number"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="272dp" />

    <EditText
        android:id="@+id/direccionRecTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="267dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="339dp" />

    <Button
        android:id="@+id/solicitarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="165dp"
        android:onClick="eventoBoton"
        android:text="@string/solicitar"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="440dp" />
</RelativeLayout>