<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conLink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206020"
    tools:context=".ConductorSignUp2">

    <Button
        android:id="@+id/registrarseConBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="173dp"
        android:text="@string/registrarse"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="428dp" />

    <Button
        android:id="@+id/ingresarConBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="173dp"
        android:onClick="entrarButton"
        android:text="@string/ingresar"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="428dp" />

    <TextView
        android:id="@+id/conLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="Login Conductor"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="47dp" />

    <EditText
        android:id="@+id/contraseñaConTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="297dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="281dp" />

    <EditText
        android:id="@+id/correoConTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="375dp"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="526dp"
        android:text="@string/no_tengo_una_cuenta_creada"
        android:textColor="@color/colorAccent"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="546dp" />
</RelativeLayout>