<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206020"
    tools:context=".detalleSolicitud">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/detalle_de_solicitud"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/nombreDetalleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lotesDetalleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="179dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/direccionDetalleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/nombreLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:text="@string/nombre_del_reciclador" />

    <TextView
        android:id="@+id/LoteLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="193dp"
        android:text="@string/cantidad_de_lotes" />

    <TextView
        android:id="@+id/direcLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="336dp"
        android:text="@string/direccion" />

    <Button
        android:id="@+id/retiradoBtn"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="182dp"
        android:text="@string/retirado" />
</RelativeLayout>